# autonomous-researcher

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.ui  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: graph.py
app/agents/: __init__.py  critic.py  planner.py  researcher.py  synthesizer.py
app/api/: server.py
app/evaluation/: __init__.py  heuristics.py  ragas_eval.py  test_set.py
app/memory/: __init__.py  checkpointer.py  long_term.py
app/prompts/: __init__.py  critic.py  planner.py  researcher.py  synthesizer.py
app/tools/: __init__.py  fetch_url.py  python_exec.py  vector_search.py  web_search.py
corpus/: genai_vietnam_fintech_2024.md  langgraph_vs_crewai.md  momo_overview.md  tiki_overview.md  vng_q3_2024.md
scripts/: ingest_corpus.py  run_eval.py  test_setup.py
tests/: test_api.py  test_graph.py  test_heuristics.py  test_state.py  test_tools.py
ui/: streamlit_app.py
