[project]
name = "autonomous-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-core>=1.3.2",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langsmith>=0.7.36",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "tavily-python>=0.7.23",
    "uvicorn>=0.46.0",
]
