[project]
name = "autonomous-researcher"
version = "0.1.0"
description = "Autonomous multi-agent deep research system (Planner → Researchers → Synthesizer → Critic loop) built on LangGraph."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Core LangChain / LangGraph
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-experimental>=0.3.0",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langsmith>=0.1.140",
    # Model providers
    "langchain-groq>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
    "langchain-huggingface>=0.1.0",
    # Vector store
    "qdrant-client>=1.12.0",
    "langchain-qdrant>=0.2.0",
    "fastembed>=0.4.0",
    # Search & scraping tools
    "tavily-python>=0.5.0",
    "duckduckgo-search>=6.3.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.13.0",
    # Data handling
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    # API server
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sse-starlette>=2.1.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.40.0",
]
eval = [
    "ragas>=0.2.0",
    "datasets>=3.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "ipython",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "ui"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
